--- a/src-ios/Viaje Com Darcy/Podfile
+++ b/src-ios/Viaje Com Darcy/Podfile
@@ -7,5 +7,7 @@ target 'Viaje Com Darcy' do
     
    pod 'Alamofire', :git => 'https://github.com/Alamofire/Alamofire.git', :branch => 'master'
    pod 'SwiftCarousel'
+   pod 'Fabric'
+   pod 'Crashlytics'
 
 end
