--- a/src-ios/Viaje Com Darcy/Viaje Com Darcy/Info.plist
+++ b/src-ios/Viaje Com Darcy/Viaje Com Darcy/Info.plist
@@ -17,7 +17,21 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>0.2 - DEV</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>711664a60811e45aa7eae0130a901ffe01a3880e</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
